Fixed layout issue middle column

--- a/webstore-clothes/client/shop.css
+++ b/webstore-clothes/client/shop.css
@@ -34,7 +34,7 @@
  }
 
 .shop-content-thirds-height {
- height: 33%;
+ height: 33.1%;
  margin-bottom: 0.6%;
 }
 
@@ -115,3 +115,4 @@
 .hover-gray:hover {
   background-color: #e6e6e6;
 }
+
